# duotronic-computing

./: .gitignore  INTRINSICS.md  README.md
docs/: DUOTRONIC_PAPER.md  FORMAL_EVALUATION.md  PAPER_OUTLINE.md  TERNARY_SEMANTIC_LIBRARY_SPEC.md  ecosystem.md  outline.md  position-paper-bounded-ternary.md
essays/: 01-why-binary-won.md  02-when-binary-struggles.md  03-ternary-as-semantics.md  04-duotronic-not-replacement.md  05-failure-modes.md  06-duotronic-and-the-osi-model.md  06-open-questions.md  07-open-questions.md  07-why-this-is-not-a-bet.md  08-why-this-is-not-a-bet.md  README.md
essays/tlu_abi_ref/: CMakeLists.txt  README.md
essays/tlu_abi_ref/include/: tlu_abi.h  tlu_intrinsics.h
essays/tlu_abi_ref/src/: tlu_abi_ref.c
essays/tlu_abi_ref/tests/: test_tlu_abi_ref.c
essays/tsl_ref/: CMakeLists.txt  README.md  bench_results.txt
essays/tsl_ref/bench/: bench_reduce.cpp  bench_reduce_baseline.cpp
essays/tsl_ref/include/tsl/: cmp.hpp  ops.hpp  policy.hpp  reduce.hpp  serialize.hpp  trit.hpp
essays/tsl_ref/tests/: test_add_sat_table.cpp  test_cmp_policy.cpp  test_ops_tables.cpp  test_policy_compile.cpp  test_reduce.cpp  test_reduce_policy.cpp  test_serialize.cpp  test_toy_masked_pipeline.cpp  test_toy_pipeline.cpp  test_trit_compile.cpp
